# dsearch

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.txt  coverage.sh  docker.sh
.github/workflows/: build.yml
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  DirectoryGroupScan.cpp  DirectoryScan.cpp
core/include/core/: DirectoryGroupScan.h  DirectoryScan.h  DriectoryScan.h  HashXxh3.h
core/include/core/duplicate_search/: DuplicateSearch.h  Factory.h  HashSearch.h  HeadSearch.h  IndexedSearch.h  NameSearch.h  SizeSearch.h
core/include/core/facade/: FileGroupsScan.h
core/include/core/file_api/: FileApi.h  FileStream.h
core/include/core/hash/: HashXxh3.h
core/src/duplicate_search/: Factory.cpp
core/src/facade/: FileGroupsScan.cpp
test_core/: CMakeLists.txt  TestDuplicateSearch.cpp  test.cpp
